<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2015 The Gravitee team (http://gravitee.io)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.gravitee</groupId>
        <artifactId>gravitee-parent</artifactId>
        <version>20.0</version>
    </parent>

    <groupId>io.gravitee.node</groupId>
    <artifactId>gravitee-node</artifactId>
    <version>1.23.0</version>

    <name>Gravitee.io - Node</name>

    <packaging>pom</packaging>

    <modules>
        <module>gravitee-node-api</module>
        <module>gravitee-node-cache</module>
        <module>gravitee-node-cluster</module>
        <module>gravitee-node-container</module>
        <module>gravitee-node-tracing</module>
        <module>gravitee-node-vertx</module>
        <module>gravitee-node-management</module>
        <module>gravitee-node-reporter</module>
        <module>gravitee-node-plugins</module>
        <module>gravitee-node-monitoring</module>
        <module>gravitee-node-jetty</module>
        <module>gravitee-node-kubernetes</module>
        <module>gravitee-node-certificates</module>
        <module>gravitee-node-notifier</module>
        <module>gravitee-node-license</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Import bom to properly inherit all dependencies -->
            <dependency>
                <groupId>io.gravitee</groupId>
                <artifactId>gravitee-bom</artifactId>
                <version>${gravitee-bom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <!-- Self import modules -->
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-container</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-vertx</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-cluster</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-monitoring</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-management</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-reporter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-plugins</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-services</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-jetty</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-certificates</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-kubernetes</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gravitee.node</groupId>
                <artifactId>gravitee-node-cache</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Gravitee.io -->
            <dependency>
                <groupId>io.gravitee.common</groupId>
                <artifactId>gravitee-common</artifactId>
                <version>${gravitee-common.version}</version>
            </dependency>

            <dependency>
                <groupId>io.gravitee.reporter</groupId>
                <artifactId>gravitee-reporter-api</artifactId>
                <version>${gravitee-reporter-api.version}</version>
            </dependency>

            <dependency>
                <groupId>io.gravitee.tracing</groupId>
                <artifactId>gravitee-tracing-api</artifactId>
                <version>${gravitee-tracing-api.version}</version>
            </dependency>

            <dependency>
                <groupId>io.gravitee.plugin</groupId>
                <artifactId>gravitee-plugin-core</artifactId>
                <version>${gravitee-plugin.version}</version>
            </dependency>

            <dependency>
                <groupId>io.gravitee.plugin</groupId>
                <artifactId>gravitee-plugin-notifier</artifactId>
                <version>${gravitee-plugin.version}</version>
            </dependency>

            <dependency>
                <groupId>io.gravitee.el</groupId>
                <artifactId>gravitee-expression-language</artifactId>
                <version>${gravitee-expression-language.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>io.gravitee.alert</groupId>
                <artifactId>gravitee-alert-api</artifactId>
                <version>${gravitee-alert-api.version}</version>
            </dependency>

            <dependency>
                <groupId>io.gravitee.kubernetes</groupId>
                <artifactId>gravitee-kubernetes-client</artifactId>
                <version>${gravitee-kubernetes-client.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk15on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk15on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>

            <!-- Spring -->
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-redis</artifactId>
                <version>${spring-data-redis.version}</version>
            </dependency>

            <!-- Hazelcast -->
            <dependency>
                <groupId>com.hazelcast</groupId>
                <artifactId>hazelcast</artifactId>
                <version>${hazelcast.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-pool2</artifactId>
                <version>${commons-pool2.version}</version>
            </dependency>

            <!-- Licensing -->
            <dependency>
                <groupId>com.javax0.license3j</groupId>
                <artifactId>license3j</artifactId>
                <version>${license3j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>

    <properties>
        <gravitee-bom.version>2.5</gravitee-bom.version>
        <gravitee-common.version>1.25.0</gravitee-common.version>
        <gravitee-plugin.version>1.23.0</gravitee-plugin.version>
        <gravitee-expression-language.version>1.9.2</gravitee-expression-language.version>
        <gravitee-reporter-api.version>1.22.0</gravitee-reporter-api.version>
        <gravitee-tracing-api.version>1.0.0</gravitee-tracing-api.version>
        <gravitee-kubernetes-client.version>0.3.0</gravitee-kubernetes-client.version>
        <snakeyaml.version>1.30</snakeyaml.version>
        <hazelcast.version>4.1.9</hazelcast.version>
        <gravitee-alert-api.version>1.8.0</gravitee-alert-api.version>

        <!-- WARNING: the next two dependencies versions must be kept in sync regarding vertx-micrometer-metrics -->
        <micrometer-registry-prometheus.version>1.6.2</micrometer-registry-prometheus.version>
        <LatencyUtils.version>2.0.3</LatencyUtils.version>
        <bouncycastle.version>1.70</bouncycastle.version>
        <guava.version>31.1-jre</guava.version>
        <license3j.version>3.2.0</license3j.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                    <source>8</source>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.hubspot.maven.plugins</groupId>
                <artifactId>prettier-maven-plugin</artifactId>
                <version>0.17</version>
                <configuration>
                    <nodeVersion>12.13.0</nodeVersion>
                    <prettierJavaVersion>1.6.1</prettierJavaVersion>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
